# data_science_practice_2025

./: ..gitignore.~undo-tree~  .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: enforce-folder-permissions-push.yml  enforce-folder-permissions.yml  track-pr-reviews.yml
21404828/module1/: user
21404828/module2/mysupertools/: .gitignore  README.md  pyproject.toml
21404828/module2/mysupertools/mysupertools/tool/: __init__.py  operation_a_b.py
21404828/module3/: .gitignore  README.md  exercise1.ipynb  module3_exercise1.ipynb  pyproject.toml  submission.csv
21404828/module4/: .gitignore  module4_exercise1.ipynb  pyproject.toml  submission.csv
21404828/module5/: module5_exercise.ipynb  pyproject.toml  submission.csv
21404828/module6/: .gitignore  exercise1.ipynb  pyproject.toml  submission.csv
21404828/module7/: .gitignore  module7_exercise1.ipynb  predictions.csv  pyproject.toml
21404828/module8/: .gitignore  module8_exercise3.ipynb  pyproject.toml  submission.csv
21404828/module9/: Q.npy  agent.py  module9_exercise2.ipynb  pyproject.toml
Antoinehz38/module1/: user
Antoinehz38/module3/: exercise1.ipynb  submission.csv
Antoinehz38/module4/: exercise1.ipynb  submission.csv
Antoinehz38/module5/: exercice1.ipynb  submission.csv
Camel-glitch/module1/: user
Camel-glitch/module3/: module3_exercise1.ipynb  submission.csv
Camel-glitch/module4/: module4_exercise1.ipynb  submission.csv
Camel-glitch/module5/: module5_exercise.ipynb  submission.csv
Camel-glitch/module6/: module6_exercise.ipynb  submission.csv
Camel-glitch/module7/: module7_exercise1.ipynb  predictions.csv
Camel-glitch/module8/: module8_exercise3.ipynb  submission.csv
Camel-glitch/module9/: agent.py
ErwanR123/module1/: user
ErwanR123/module2/: .gitignore
ErwanR123/module3/: submission.csv
ErwanR123/module4/: module4_exercise1.ipynb  submission.csv
ErwanR123/module5/: module5_exercise.ipynb  submission.csv
ErwanR123/module6/: module6_exercise.ipynb  submission.csv
ErwanR123/module7/: predictions.csv  submission.csv
ErwanR123/module9/: agent.py  module9_exercise2.ipynb
Glttr/module1/: user
Glttr/module3/: exercise1.ipynb  submission.csv
Glttr/module4/: exercise1.ipynb  submission.csv
Glttr/module5/: exercise1.ipynb  submission.csv
Glttr/module6/: exercise1.ipynb  submission.csv
Glttr/module8/: exercise3.ipynb  submission.csv
Glttr/module9/: agent.py  exercise2.ipynb
Kassimberthe/module1/: user
Kassimberthe/module3/: exercise1.ipynb  submission.csv
Kassimberthe/module4/: exercise1.ipynb  submission.csv
Kassimberthe/module5/: exercise1.ipynb  submission.csv
Kassimberthe/module6/: exercise1.ipynb  submission.csv
Kassimberthe/module8/: exercise1.ipynb
Kassimberthe/module9/: agent.py
Tarek Djaker/: .gitignore  README.md
Tarek Djaker/module1/: user
Tarek Djaker/module3/: EXO3.ipynb
Tarek Djaker/module4/: module4_exercise1.ipynb
Tarek Djaker/module5/: module5_exercise.ipynb
Tarek Djaker/module6/: module6_exercise.ipynb
Tarek Djaker/module7/: module7_exercise1.ipynb
Tarek Djaker/module8/: EXO8.ipynb
Tarek Djaker/module9/: agent.py
Tarek Djaker/tools/: add_profile_header.ps1  clean_notebooks.py  clean_repo.ps1  profile_snippet.py  validate_mysupertools.py
ayouboa30/module1/: user
ayouboa30/module3/: EXO3.ipynb  exercise1.ipynb  module3_exercise1.ipynb  submission.csv
ayouboa30/module4/: module4_exercise1.ipynb  submission.csv
ayouboa30/module5/: EXX01.ipynb  module5_exercise.ipynb  submission.csv
ayouboa30/module6/: module6_exercise.ipynb  submission.csv
ayouboa30/module7/: module7_exercise1.ipynb  predictions.csv
ayouboa30/module8/: EXO8.ipynb  submission.csv
ayouboa30/module9/: agent.py
brisiq/module1/: user
brisiq/module2/: from_mysupertools.py
brisiq/module3/: exercise1.ipynb  submission.csv
brisiq/module4/: module4_exercise1.ipynb  submission.csv
brisiq/module5/: module5_exercise.ipynb  submission.csv
brisiq/module6/: module6_exercise.ipynb  submission.csv
brisiq/module7/: module7_exercise1.ipynb
brisiq/module8/: module8_exercise3.ipynb  submission.csv
chezke/module1/: user
chezke/module3/: module3_exercise1.ipynb  submission.csv
chezke/module4/: module4_exercise1.ipynb  submission.csv
cyruszhang36969-stack/module2/mysupertools/: pyproject.toml
hugojava/module2/mysupertools/: pyproject.toml
hugojava/module2/mysupertools/mysupertools/tool/: operation_a_b.py
issagith/module2/mysupertools/: pyproject.toml
issagith/module2/mysupertools/mysupertools/tool/: operation_a_b.py
mohymabrouk/module2/mysupertools/: README.md  pyproject.toml
mohymabrouk/module2/mysupertools/mysupertools/: __init__.py
mohymabrouk/module2/mysupertools/mysupertools/tool/: __init__.py  operation_a_b.py
scripts/: check-and-add-user.sh  check-changed-modules.sh  compute_progress_percentage.sh  deploy.sh  detect-pr-author.sh  generate_json.py  review_statistics.py  student.json  template.jinja  test_auth.sh  update_review_count.py  update_session.sh
tests/: aggregate_results.py  requirements.txt  run_tests_and_update_results.sh
tiphddddd/module2/mysupertools/: pyproject.toml
tiphddddd/module2/mysupertools/mysupertools/tool/: operation_a_b.py
(+222 files in other folders)
