[project]
dynamic = ["version"]

name = "mysupertools"
description = "The hello world of mathematicians."
keywords = ["multiply"]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
]

authors = [{ name = "Pierre Fontbonne", email = "pierre.fontbonne@etu.sorbonne-universite.fr" }]

license.text = "proprietary"

requires-python = ">=3.8"

dependencies = []

[dependency-groups]

dev = []

[project.urls]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mysupertools", "mysupertools.tool"]

[tool.setuptools.dynamic]
version = { attr = "mysupertools.__about__.__version__" }
